@startuml
'https://plantuml.com/class-diagram

class DataBase {
    -allUserNames: Map<UserName:String, Passcode:String>
    -allPofiles: map<UserName:String, profile:Profile>
    -allPosts: Map<Posts>

    + addUsers()
    + addPost()
    + removeUsers()
    + removePost()
}

class Profile {
    - UserName
    - Passcode

    - name:String
    - dob:String
    - phone:String
    - address:Address
    - visibility:Boolean
    - Friends:List<Profiles>
    - Interests:Set<String>
    - Posts:List<Post>

    + addFriend(profile: Profile):
    + removeFriend(profile: Profile):
    + addPost(post: Post):
    + removePost(post: Post):
    + addInterest(interest: String);
    + removeInterest(interest: String);

}

class Post {
    - username:String
    - date:String
    - title:String
    - interests:String
    - description:String
    - Photo:Photo
    - address:Address
}

class Address {
    - buildingNumber: String
    - streetName: String
    - aptNumber: String
    - city: String
    - state: String
    - country: String
    - zipCode: String
}

class AccountService {
    - dataBase: Database

    + LogIn():
    + LogOut():
    + CreateAccount():
    + getProfile(username: String): Profile
    + addFriend(username: String, friend:String):
    + removeFriend(username: String, friend:String):
}

class SearchService {
    - dataBase: Database

    + getPostByWordSearch(words: String):List<Post>
    + getPostsByAllFriends(username: String):List<Post>
    + getPostsByFriends(usernames: List<String>):List<Post>
    + getPostByDate():List<Post>
    + getByOnlyInterest(interest:String):List<Post>
    + getPostByUsername(username:String):List<Post>
}

class PostService{
    - dataBase: Database

    + addpost(post: Post):boolean
    + removepost(post: Post):boolean
    + createPost(...):
}

Shell *-- AccountService
Shell *-- SearchService
Shell *-- PostService

AccountService *-- DataBase
SearchService *-- DataBase
PostService *-- DataBase

DataBase *-- Profile
DataBase *-- Post

Profile *- Post
Profile *-- Address

Post *- Address

@enduml